2004-02-18  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/conn.c: fixed possible race condition. also set io_error for
      failed write operations.

2004-02-18 Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: added Arne's patch to document binfo and
      tariff support within CIMD2 module. Thanks Arne.

2004-02-18  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml: moved 'External DLR' section to sect1,
      because DLR support doesn't belong to SMSbox configuration.
      Moved 'Mysql connection' section to sect3 and made it belongs to
      mysql dlr config.

2004-02-16 Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_cimd2.c: added RPI (return-path-indication) support and 
      binfo support via tariff class in CIMD protocoll. 
      Thanks to "Arne K. Haaje" <haaje@eurobate.com> for the patch.
      [Msg-ID: <200402160909.47610.haaje@eurobate.com>]

2004-02-16 Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bb_boxc.c, gw/shared.c, gw/smsc/smsc_[cgw|emi|fake|smasi|smpp].c,
      gwlib/conn.[ch], gwlib/http.c, test/drive_smpp.c, test/fakesmsc.c,
      test/test_smsc.c: renamed conn_read_error() to conn_error() to imply
      that this is a generical IO error condition we use for abortion.
      Also within gwlib/conn.c fixes handling of POLLHUP and POLLERR 
      according to BUG#107.

2004-02-16 Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wml_compiler.c: fixed compiler warnings.

2004-02-10  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_smscconn.c: got rid of 'List *incoming_wdp'.
      No sense to be there.

2004-02-10  Alexander Malysh  <a.malysh@centrium.de>
    * gw/wml_compiler.c: applied patch that prevent segfaults on
      solaris while printing debug msgs.
      Thanks a lot to: Paul P Komkoff Jr <i@stingr.net>.
      Msg-Id: <20040209125602.GK12061@stingr.net>.

2004-02-04  Alexander Malysh  <a.malysh@centrium.de>